--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
-<!--index.html-->
-
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/simple-peer@latest/dist/simplepeer.min.js"></script> -->
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
         body{padding-top: 5rem;}
     </style>
 </head>
 <body>
+    
     <nav class="navbar fixed-top bg-body-tertiary">
-          <a class="navbar-brand" href="#">Demo WebRTC</a>
+          <a class="navbar-brand" href="#">Appel video</a>
       </nav>
 
       <div class="container">
@@ -47,10 +45,6 @@
             </div>
         </div>
       </div>
-      <!-- <script src="https://cdn.jsdelivr.net/npm/simple-peer@10.2.1/dist/simplepeer.min.js"></script> -->
-
- 
-
       <script src="simplepeer.min.js"></script>
       <script src="app.js"></script>
 </body>
